# todo-app

./: README  README.md  directory_tree.txt  docker-compose.yml
backend/: Dockerfile  README  README.md  alembic.ini  backend-directory-tree.txt  backend_dir.txt  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 300a642257c2_create_users_table.py  9ce3486eb35d_create_users_and_tasks_table.py  c0b5165689ed_initial_schema.py
backend/app/: main.py
backend/app/crud/task/: done.py  list.py  task.py
backend/app/crud/user/: user.py
backend/app/db/: db.py  session.py
backend/app/echo/: echo.py
backend/app/models/: __init__.py  todo_list.py  todo_task.py  user.py  user_settings.py
backend/app/models/task/: done.py  list.py  task.py
backend/app/models/user/: user.py
backend/app/routers/task/: done.py  list.py  task.py
backend/app/routers/user/: user.py
backend/app/schemas/task/: done.py  list.py  task.py
backend/app/schemas/user/: user.py
backend/app/test/: echo.py
backend/app/utils/: auth.py
frontend/: Dockerfile  README  README.md  frontend_dir.txt  frontend_directory_tree.txt  package-lock.json
frontend/app/: package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/app/src/: App.js  App.jsx  frontend_src_directory_tree.txt  index.css  main.jsx
frontend/app/src/api/: axiosConfig.js  client.js
frontend/app/src/app/: App.jsx  router.jsx
frontend/app/src/component/: Auth.jsx  Home.jsx  Navbar.jsx  Todo.jsx  User.jsx
frontend/app/src/constants/: api.js
frontend/app/src/router/: AppRouter.jsx
(+22 files in other folders)
